# ft_transcendence

./: .flake8  .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml
django/ft_transcendence/: asgi.py  settings.py  urls.py  wsgi.py
django/user_management/: db_paths.py  db_urls.py  forms.py  models.py  urls.py  views.py
django/user_management/migrations/: 0001_initial.py
django/user_management/templates/user_management/: base.html  change_password.html  friend_list.html  login.html
ft_transcendence/chat/: consumers.py  routing.py
ft_transcendence/ft_transcendence/: asgi.py  settings.py  urls.py  wsgi.py
ft_transcendence/pong/: consumers.py  consumers_async.py  forms.py  game.py  models.py  routing.py  urls.py  views.py  workers.py
ft_transcendence/pong/migrations/: 0001_initial.py  0002_alter_pongroom_name.py
ft_transcendence/pong/templates/pong/: base.html  enter.html  pong.html  room.html
ft_transcendence/static/css/: base_app.css  base_sign.css  style.css
ft_transcendence/static/js/: index.js
ft_transcendence/static/js/app/: index.js
ft_transcendence/static/js/sign/: index.js
ft_transcendence/static/js/views/: change_password.js  friend_list.js  homepage.js  login.js  register.js
ft_transcendence/user_management/: db_paths.py  db_urls.py  forms.py  models.py  urls.py  views.py
ft_transcendence/user_management/migrations/: 0001_initial.py  0002_truser_updated_at_blockedusers_friendrequest_and_more.py
ft_transcendence/user_management/templates/user_management/: base.html  base_app.html  base_sign.html  change_password.html  change_password_block.html  chat.html  friend_list.html  friend_list_block.html  login.html  login_block.html  profile.html  register.html  register_block.html  sign_in.html  (+1 more)
pong_html_page/: index.html  login.html
(+9 files in other folders)
